# Face-Anti-Spoofing-Model-based-on-the-SpoofFormer-Architecture

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  LICENSE  README.md  docker-compose.yml  inference.py  pyproject.toml  requirements.txt  train.py
configs/: model_configs.yaml
docs/: IMPLEMENTATION.md  paper_summary.md
scripts/: download_dataset.py  export_model.py
src/spoofformer/: __init__.py  config.py
src/spoofformer/data/: __init__.py  augmentation.py  dataset.py  transforms.py
src/spoofformer/export/: __init__.py  onnx_export.py  quantization.py  torchscript_export.py
src/spoofformer/inference/: __init__.py  engine.py  preprocessing.py  result.py
src/spoofformer/models/: __init__.py  classification_head.py  patch_embedding.py  spoofformer.py  transformer.py
src/spoofformer/training/: __init__.py  metrics.py  trainer.py
tests/: __init__.py  conftest.py  test_config.py  test_models.py
